Commit en index.html

--- a/index.html
+++ b/index.html
@@ -525,9 +525,9 @@
             
             <div class="mt-3 p-2 bg-secondary rounded">
               <h6 class="small"><i class="fas fa-info-circle text-info"></i> Información Legal</h6>
-              <p class="mb-1 small">• Esta es una versión gratuita (freeware) del software ToySoft</p>
-              <p class="mb-1 small">• Puede ser utilizada libremente para fines comerciales</p>
-              <p class="mb-1 small">• No se requiere licencia ni pago por su uso</p>
+              <p class="mb-1 small">• Esta es una versión paga del software ToySoft</p>
+              <p class="mb-1 small">• Es utilizada para fines comerciales</p>
+              <p class="mb-1 small">• Se requiere pago por su uso</p>
               <p class="mb-0 small">• Desarrollado por Emil Jiménez Ortiz</p>
             </div>
           </div>
